--- a/app/views/static_pages/about.html
+++ b/app/views/static_pages/about.html
@@ -13,7 +13,7 @@ inspiration.</p><br />
 
 <p>Many ramen noodles later, this is our site.</p><br />
 
-<p>If you need help or have suggestions/feedback, please contact us at <a href="mailto:vrepo1900@gmail.com">vrepo1900 (at) gmail.com</a>.
+<p>If you need help or have suggestions/feedback, please contact us at vrepo1900 (at) gmail.com.
 </p><br />
 
 </div>
