--- a/app/views/static_pages/contact.html
+++ b/app/views/static_pages/contact.html
@@ -1,6 +1,6 @@
 <div class="span8 offset2">
 
-<p>If you need help or have suggestions/feedback, please contact us at <a href="mailto:vrepo1900@gmail.com">vrepo1900 (at) gmail.com</a>.
+<p>If you need help or have suggestions/feedback, please contact us at vrepo1900 (at) gmail.com.
 </p><br />
 
 </div>
