--- a/app/assets/stylesheets/playlists.css.scss
+++ b/app/assets/stylesheets/playlists.css.scss
@@ -130,6 +130,11 @@
   border-radius: 4px;
 }
 
+.watchModal {
+	width:800px;
+	left:450px;
+}
+
 .edit_bookmark_fields, .move_bookmark {
 	display: none;
 }
