--- a/app/views/jsfiles/playground.html.erb
+++ b/app/views/jsfiles/playground.html.erb
@@ -55,30 +55,6 @@
 
     <div class="container-fluid">
     <div class="row-fluid">
-      <div class="span3">
-        <div class="well sidebar-nav">
-          <ul class="nav nav-list">
-            <li class="nav-header">Sidebar</li>
-            <li class="active"><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li class="nav-header">Sidebar</li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li class="nav-header">Sidebar</li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-          </ul>
-        </div><!--/.well -->
-      </div>
-      <div class="span9">
-      <!-- Main hero unit for a primary marketing message or call to action -->
         <div class="hero-unit">
           <h1>Hello, world!</h1>
           <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three   supporting pieces of content. Use it as a starting point to create something more unique.</p>
@@ -87,22 +63,22 @@
   
         <!-- Example row of columns -->
         <div class="row-fluid">
-          <div class="span2">
-            <div class="media">
-              <a class="pull-left" href="#">
-              <img class="media-object thumbnail cycle" data-tnprefix = "http://img100.xvideos.com/videos/thumbslll/e8/7e/12/e87e120ca2517d92f9389028136420f8/e87e120ca2517d92f9389028136420f8" data-tnindex = "28" src="http://img100.xvideos.com/videos/thumbslll/e8/7e/12/e87e120ca2517d92f9389028136420f8/e87e120ca2517d92f9389028136420f8.28.jpg">
-              </a>
-            </div>
-            <div class="media-body">
-              <h4 class="media-heading">Denise Milani</h4>
-            </div> 
+           <object width="880" height="696"><param name="movie" value="http://www.eporner.com/player/146404"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.eporner.com/player/146404" type="application/x-shockwave-flash" allowscriptaccess="always" width="880" height="696"></embed></object> 
           </div>
-          <div class="span4">
-            <iframe scrolling="no" frameborder="0" width="450" height="350" src="http://localhost:3000/jsfiles/embed"></iframe> 
+          <div class="span3">
+            <div style="background:#EAEAFF; width:115px; height:135px; display:inline-block; margin:0px; border: 0px solid; border-radius:8px; background-repeat:no-repeat;">
+              <a href="" class="btn btn-block btn-primary" style="border-bottom-right-radius:0px;border-bottom-left-radius:0px;border-top-right-radius:8px;border-top-left-radius:8px;">Drag &amp; Drop</a>
+              <img src="http://icons.iconarchive.com/icons/dapino/medical/128/blood-drop-icon.png" style="height:105px; margin-left:auto; margin-right:auto;display:block;"></img>
+            </div>
+          </div>
+          <div class="span3">
+            <div style="background:#EAEAFF; width:115px; height:135px; display:inline-block; margin:0px; border: 0px solid; border-radius:8px; background-repeat:no-repeat;">
+              <a href="" class="btn btn-block btn-primary" style="border-bottom-right-radius:0px;border-bottom-left-radius:0px;border-top-right-radius:8px;border-top-left-radius:8px;">Form</a>
+              <img src="http://i.imgur.com/hdVna0n.png" style="height:105px; margin-left:auto; margin-right:auto;display:block;"></img>
+            </div>
           </div>
         </div>
         <hr>
-      </div>
       <footer>
         <p>&copy; Company 2013</p>
       </footer>
