--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,6 +5,7 @@
         <ul class="nav">
           <li><%= link_to "<img src='/assets/glyphicons/glyphicons_020_home.png'></img> VRepo".html_safe, home_path, class:"logo", style:"color:#3880FF" %></li>
           <li><%= link_to "<img src='/assets/glyphicons/glyphicons_021_snowflake.png'></img> About Us".html_safe, about_path %></li>
+          <li><%= link_to "<img src='/assets/glyphicons/glyphicons_195_circle_info.png'></img> Info".html_safe, info_path %></li>
           <li><%= link_to "<img src='/assets/glyphicons/glyphicons_203_lock.png'></img> Privacy".html_safe, privacy_path %></li>
           <li><%= link_to "<img src='/assets/glyphicons/glyphicons_010_envelope.png'></img> Contact".html_safe, contact_path %></li>
           <li><%= link_to "<img src='/assets/glyphicons/glyphicons_029_notes_2.png'></img> Blog".html_safe, 'http://vrepo.wordpress.com/'%></li>
