--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,8 +1,7 @@
-	<div class="span10 offset1">
+	<div class="span12">
 		<div class="hero-unit home">
 		  <h1>Welcome to VRepo!</h1>
-		  <h3>It's an online utility I made to bookmark my porn.</h3>
-		  <h3>You can explore by trying some stuff out.</h3>
+		  <h3>A Utility I made for Anonymously Bookmarking for Adults</h3>
 		  <br/>
 			<div class="row-fluid options">
 			  <div class="span3">
@@ -47,7 +46,7 @@
 			  <div class="span3">
 			  	<div class="center-button-table"><div class="center-button-cell">
 			  		<% if current_user%>
-				  		<a href="#" class="btn btn-primary btn-large new-bookmark-modal-link">Add A Link <i class="icon-plus icon-white"></i></a><br />
+				  		<a href="#" class="btn btn-primary btn-large new-bookmark-modal-link">Get Started <i class="icon-plus icon-white"></i></a><br />
 			  			<div id="new-bookmark-modal-holder">
 				  			<%= render '/user_bookmarks/modal_new' %>
 				  		</div>
@@ -62,88 +61,50 @@
 		</div>
 	</div>
 </div>
-
-<div class="row-fluid info">
-
-	<div class="span4 offset1" id="signup-container">
-		<a id="signing-up"></a><h2>Signing Up</h2>
+<div class="row-fluid info2">
+	<div class = "span8">
 		<div class="row-fluid">
-			<div class="span12">
-				<h4>What it lets you do:</h4>
-				<p>Having an account lets you<p>
-				<ul>
-					<li>keep your bookmarks and playlists saved for good after you've left the site</li>
-					<li>access them easily by going to vrepo.com/--your-username-here--</li>
-					<li>use the bookmarklet to bookmark pages when you're on other sites.</li>
-					<li>edit your account by change your username and password.</a>
-				</ul>
-				<p>So you can still <i>try out</i> the site without actually joining, but there's less you can do, and joining is really easy!</p>
-			</div>
-		</div>
-		<hr>
-		<div class="row-fluid">
-			<div class="span12">
-				<h4>As simple as proving you're a human</h4>
-				<p>Just by playing through a super-simple PlayThru™ game, we can filter out bots and give you a profile. After that, you can give edit your profile to give yourself a username and password if you want.</p>
-				<p>One thing: for this site to work, you do need cookies and javascript enabled, and it works best in up-to-date versions of Chrome, Firefox, Safari, and IE 7+. </p>
-				<div class="center-button-table"><div class="center-button-cell">
-					<% if current_user%>
-			  		<% if current_user.human? %>
-			  			<%= link_to "Edit Account »", '', :class=>"btn btn-cherry signup-modal-link" %>
-				  	<% else %>
-			  			<%= link_to "Sign Up »", '', :class=>"btn btn-cherry signup-modal-link" %>
-				  	<% end %>
-			  	<% else %>
-		  			<%= link_to "Sign Up »", '', :class=>"btn btn-cherry signup-modal-link" %>
-			  	<% end %>
-			  </div></div>
-			</div>
-		</div>
-		<hr>
-		<div class="row-fluid">
-			<div class="span12">
-				<h4>Your Privacy</h4>
-				<p>I'm <strong>not asking for your email address.</strong> If I ever do want it then I'll ask ya'll nicely, and it'll be entirely optional. I don't collect/share any kind of personal data. Here is a link to the site's privacy policy, and here's a link to frequently asked questions. I take your privacy seriously: I realize that's kind of the entire point of using this.</p>
-			</div>
+			<h3>Three Ways to Add Links</h3>
+		  <div class="span4">
+		    <div class="feature">
+		    	<div>
+					      <a href="" class="btn btn-block btn-primary">Bookmarklet</a>
+					      <img src="http://i.imgur.com/62gkiK5.png"></img>
+				  </div>
+		    </div>
+		    <div class="more-info">Use a bookmarklet to favorite videos when browsing other sites</div>
+		  </div>
+		  <div class="span4">
+		    <div class="feature"><div>
+			      <a href="" class="btn btn-block btn-primary">Drag &amp; Drop</a>
+			      <img src="http://icons.iconarchive.com/icons/dapino/medical/128/blood-drop-icon.png"></img>
+					</div></div>
+		    <div class="more-info">Drag a favorite video from any other site to a window the VRepo home page or your playlist</div>
+		  </div>
+		  <div class="span4">
+		    <div class="feature">
+		    	<div>
+		      <a href="" class="btn btn-block btn-primary">Form</a>
+		      <img src="http://i.imgur.com/hdVna0n.png"></img>
+		    </div>
+		    </div>
+		    <div class="more-info">Use the standard "Add a Link" form to manually add your favorite links</div>
+		  </div>
 		</div>
 	</div>
-
-	<div class="span4 offset2" id="add-links-container">
-		<a id="adding-links"></a><h2>Adding Links</h2>
-		<div class="row-fluid">
-			<div class="span12">
-				<h4>Bookmarklet</h4>
-				<p class="contains_bookmarklet">To use it, drag this <a id="bookmarklet" href ="javascript:(function(){jq=document.createElement('SCRIPT');jq.type='text/javascript';jq.src='//www.vrepo.com/jsfiles/jquery_bookmarklet.min.js';document.getElementsByTagName('head')[0].appendChild(jq);})();"><%= image_tag 'bookmarklet.png' %></a> and drop it in your bookmark bar, which should be under your address bar.</a></p>
-				<br />
-				<p>When you're logged in here and click it, and something like this image below will show up near the top of your website.</p><br />
-				<%= image_tag 'Bookmarklet Example.png' %><br /><br />
-				<p>Keep in mind that this only works if you have an account and are logged in.</p>
-			</div>
-		</div>
-		<hr>
-		<div class="row-fluid">
-			<div class="span12">
-				<h4>Form</h4>
-				<p>Click the button below (there'll be a button like this on your standard home page), and a modal window will come up and let you set the title and submit the link.</p>
-			 	<p>From there, it'll take you to the page containing your links.</p>
-			 	<div class="center-button-table"><div class="center-button-cell">
-			 		<% if current_user %>
-			  		<a href="#" class="btn btn-primary new-bookmark-modal-link">Add A Link <i class="icon-plus icon-white"></i></a><br />
-		  		<% else %>
-			  		<a href="#" class="btn btn-primary disabled">Add A Link <i class="icon-plus icon-white"></i></a><br />
-		  		<% end %>
-			  </div></div>
-			</div>
-		</div>
-		<hr>
-		<div class="row-fluid">
-			<div class="span12">
-				<h4>Drag-and-Drop</h4>
-				<p>Just drag a the URL off the address bar from another site and drop it onto any page with an "Add Bookmark" button like the one above or below this, (including this page), if you want to try it now like this:</p>
-				<%= image_tag 'dragondrop.png' %><br />
-			 	<p>A modal window will come up and let you set the title and submit the link.</p>
-			</div>
-		</div>
+	<div class="span4">
+		<h3>Info</h3>
+		This site is intended as a <strong>safe</strong> place to
+		<ul>
+			<li><strong>Access</strong> - from <i>vrepo.com/YourUserName</i></li>
+			<li><strong>Watch</strong> - videos from your playlists</li>
+			<li><strong>Categorize</strong> - links and videos for easy viewing</li>
+		</ul>
+		your adult video links. 
+		<br /><br />
+		<p> VRepo.com does not and has no intention of collecting your e-mail or any other information which can be traced back to your offline identity. <p>
 	</div>
+</div>
+
 	<!-- last row-fluid gets closed in application.erb.html -->
 
