--- a/app/views/user_bookmarks/_bookmark_fields.html.erb
+++ b/app/views/user_bookmarks/_bookmark_fields.html.erb
@@ -82,7 +82,7 @@
 	  	</div>
   	<% end %>
   	<% if !(user_bookmark.bookmark_url.embed.nil?) %>
-			<div class="modal hide fade">
+			<div class="modal hide fade watchModal">
 			  <div class="modal-header">
 			    <button type="button" class="close" data-dismiss="modal">×</button>
 			    <h3 >Video</h3>
