--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,7 @@
 	<div class="span12">
 		<div class="hero-unit home">
 		  <h1>Welcome to VRepo!</h1>
-		  <h3>A Utility I made for Anonymously Bookmarking for Adults</h3>
+		  <h3>A Utility for Anonymously Bookmarking Adult Content</h3>
 		  <br/>
 			<div class="row-fluid options">
 			  <div class="span3">
