--- a/app/views/user_bookmarks/_modal_new.html.erb
+++ b/app/views/user_bookmarks/_modal_new.html.erb
@@ -19,7 +19,7 @@
   	<div class = "alert-container-success">
 	  	<div class = "alert alert-success">
 	  		<a class="close" data-dismiss="alert" href="#">&times;</a>
-	  		Your bookmark was successfully created. Close this alert to add another.
+	  		Your bookmark was successfully created <%= link_to 'here', current_user %>. Close this alert to add another. 
 	  	</div>
 	  </div>
   	<div class = "alert-container-error">
