did layout changes added access control

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -50,3 +50,21 @@ body {
 		z-index:2;
 	}
 }
+
+
+#navbar-input-1 {
+	height:14px;
+	margin-right: 6px;
+	width:100px;
+	margin-top:8px;
+}
+#navbar-input-2 {
+	height:14px;
+	margin-left: 6px;
+	margin-right: 12px;
+	width:100px;
+	margin-top:8px;
+}
+#navbar-form-button {
+	margin-top:7px;
+}
