--- a/app/views/jsfiles/playground.html.erb
+++ b/app/views/jsfiles/playground.html.erb
@@ -40,7 +40,7 @@
               <li class="dropdown">
                 <a class="dropdown-toggle" href="#" data-toggle="dropdown">Sign In <strong class="caret"></strong></a>
                 <div class="dropdown-menu" style="padding: 15px; padding-bottom: 0px;">
-                  <form>
+                  <form>raker
                     <input type="text" placeholder="Username">
                     <input type="password" placeholder="Password">
                     <button type="submit" class="btn">Sign in</button>
