--- a/app/views/users/_modal_edit.html.erb
+++ b/app/views/users/_modal_edit.html.erb
@@ -7,9 +7,9 @@
     <div class="modal-body">
       <%= f.text_field :username, :value=> "",:placeholder=>"Set A New Username" %><br />
       <%= f.password_field :password, :placeholder=>"Set a New Password" %><br>
-      <% if !(@user.human?) %>
-        <%= @publisher_html.try(:html_safe)  %>
-      <% end %>
+      <%# if !(@user.human?) %>
+        <%#= @publisher_html.try(:html_safe)  %>
+      <%# end %>
     </div>
     <div class="modal-footer">
       <div class = "form-buttons">
