--- a/app/views/users/_modal_new.html.erb
+++ b/app/views/users/_modal_new.html.erb
@@ -7,7 +7,7 @@
     <div class="modal-body">
       <%= f.text_field :username, :placeholder=>"Username" %><br />
       <%= f.password_field :password, :placeholder=>"Password" %><br />
-      <%= @publisher_html.try(:html_safe)  %>
+      <%#= @publisher_html.try(:html_safe)  %>
     </div>
     <div class="modal-footer">
       <div class = "form-buttons">
