--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,10 +2,11 @@
   <div class="navbar-inner">
     <div class="container-fluid">
       <div class="nav-collapse collapse">
-        <ul class="nav">
-          <li><%= link_to "<img src='/assets/glyphicons/glyphicons_020_home.png'></img> VRepo".html_safe, home_path, class:"logo", style:"color:#3880FF" %></li>
+        <ul class="nav"><!-- <img src='/assets/glyphicons/glyphicons_020_home.png'></img> -->
+          <li><%= link_to "VRepo".html_safe, welcome_path, class:"logo", style:"color:#3880FF" %></li>
           <li><%= link_to "<img src='/assets/glyphicons/glyphicons_021_snowflake.png'></img> About Us".html_safe, about_path %></li>
           <li><%= link_to "<img src='/assets/glyphicons/glyphicons_195_circle_info.png'></img> Info".html_safe, info_path %></li>
+          <li data-toggle="tooltip" data-trigger="manual" data-placement="bottom" id="bookmark_bar" title="Bookmark Bar: (If there's no bookmark bar under the address bar, you can probably enable it)" style="position:fixed; left:25%;"></li>
           <li><%= link_to "<img src='/assets/glyphicons/glyphicons_203_lock.png'></img> Privacy".html_safe, privacy_path %></li>
           <li><%= link_to "<img src='/assets/glyphicons/glyphicons_010_envelope.png'></img> Contact".html_safe, contact_path %></li>
           <li><%= link_to "<img src='/assets/glyphicons/glyphicons_029_notes_2.png'></img> Blog".html_safe, 'http://vrepo.wordpress.com/'%></li>
@@ -13,28 +14,33 @@
         <ul class="nav pull-right">
         	<% if current_user.nil? %>
           	<!-- <li><a href="#">1 Click Save</a></li> -->
-            <li><a href="/signup">Sign Up</a></li>
+            <%= form_tag sessions_path, class:"navbar-form pull-left" do %>
+              <%= text_field_tag :username, params[:username], :placeholder => 'Username' ,id:"navbar-input-1"%>
+              <%= password_field_tag :password,'', :placeholder=>'Password' ,id:"navbar-input-2"%>
+              <button type="submit" class="btn btn-small" id="navbar-form-button">Sign in</button>
+            <% end %>
             <li class="divider-vertical"></li>
-            <li class="dropdown">
+            <li><a href="/signup">Sign Up</a></li>
+<!--             <li class="dropdown">
               <a class="dropdown-toggle" href="#" data-toggle="dropdown">Sign In <strong class="caret"></strong></a>
               <div class="dropdown-menu" style="padding: 15px; padding-bottom: 0px;">
-                <%= form_tag sessions_path do %>
-							    <%= text_field_tag :username, params[:username], :placeholder => 'Username' %>
-							    <%= password_field_tag :password,'', :placeholder=>'Password' %>
+                <%#= form_tag sessions_path do %>
+							    <%#= text_field_tag :username, params[:username], :placeholder => 'Username' %>
+							    <%#= password_field_tag :password,'', :placeholder=>'Password' %>
                   <button type="submit" class="btn">Sign in</button>
-								<% end %>
+								<%# end %>
               </div>
-            </li>
+            </li> -->
           <% else %>
-            <% if current_user.human or !current_page?(:controller => 'static_pages', :action=>'home') %>
+            <% if current_user.human or !current_page?(:controller => 'static_pages', :action=>'welcome') %>
               <li class="dropdown">
             <% else %>
               <li class="dropdown" id="temp-acct-popover-holder" data-html=true data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="<div id=temp-acct-popover>An account has been created for you.<hr>The password is the same as the username. <hr>Since this is a temp. account, your account gets wiped when you leave unless you confirm you're human.</div>">
             <% end %>
               <a href="#" class="dropdown-toggle" data-toggle="dropdown"><img src='/assets/glyphicons/glyphicons_003_user.png'> </img><%= current_user.username %> <b class="caret"></b></a>
               <ul class="dropdown-menu">
-	            	<li><%=link_to "Account Main Page", current_user , "tabindex" => "-1"%></li>
-								<li><%=link_to "Customize Profile", edit_user_path(current_user), "tabindex" => "-1"%></li>
+	            	<li><%=link_to "Home", current_user , "tabindex" => "-1"%></li>
+								<li><%=link_to "User Settings", edit_user_path(current_user), "tabindex" => "-1"%></li>
                 <li class="divider"></li>
 								<li><%= link_to 'Log Out', logout_path , "tabindex" => "-1"%></li>
               </ul>
