--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,9 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <%= stylesheet_link_tag "application", :media => "all" %>
+    <link rel="stylesheet" type="text/css" href="http://releases.flowplayer.org/5.3.2/skin/minimalist.css" />
     <%= javascript_include_tag "application" %>
+    <script src="http://releases.flowplayer.org/5.3.2/flowplayer.min.js"></script>
     <%= csrf_meta_tags %>
     <%= yield(:head) %>
   </head>
@@ -15,7 +17,7 @@
     <%= render '/layouts/header' %>
     <div class="container-fluid">
       <div class="row-fluid">
-        <%= render '/layouts/messages' %>
+        <%#= render '/layouts/messages' %>
         <%= yield %>
       </div>
     </div> <!-- end of .container -->
