--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,19 +1,18 @@
-<div class="span5 offset2">
+<div class="span4 offset2">
 <h1>Sign Up!</h1>
+<br/>
 <%= form_for @user do |f| %>
   <% if @user.errors.any? %>
-    <div class="error_messages">
-      <h2>Form is invalid</h2>
-      <ul>
-        <% @user.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
+    <% @user.errors.full_messages.each do |msg| %>
+        <div class="alert alert-error">
+          <a class="close" data-dismiss="alert">&#215;</a>
+          <%= content_tag :div, msg%>
+        </div>
+    <% end %>
   <% end %>
   <%= f.text_field :username, :placeholder=>"Username"%><br /><br />
   <%= f.password_field :password, :placeholder=>"Password" %><br /><br />
-  <%= @publisher_html.html_safe %><br />
+  <%#= @publisher_html.html_safe %><br />
   <button type="submit" class="btn btn-primary btn-large">Create Account</button>
 <% end %>
 </div>
